Pushing the docs for revision for branch: development, commit 09998a8bc7e1eb6162c8486dfcdab445634d56f4, folder: dev

--- a/dev/_modules/smac/configspace/util.html
+++ b/dev/_modules/smac/configspace/util.html
@@ -272,8 +272,8 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">configs_array</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">([</span><span class="n">config</span><span class="o">.</span><span class="n">get_array</span><span class="p">()</span> <span class="k">for</span> <span class="n">config</span> <span class="ow">in</span> <span class="n">configs</span><span class="p">],</span>
                              <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">float64</span><span class="p">)</span>
-    <span class="n">configuration_space</span> <span class="o">=</span> <span class="n">configs</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">configuration_space</span>
-    <span class="k">return</span> <span class="n">impute_default_values</span><span class="p">(</span><span class="n">configuration_space</span><span class="p">,</span> <span class="n">configs_array</span><span class="p">)</span></div>
+    <span class="n">configuration_space</span> <span class="o">=</span> <span class="n">configs</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="o">.</span><span class="n">configuration_space</span></div>
+    <span class="k">return</span> <span class="n">impute_default_values</span><span class="p">(</span><span class="n">configuration_space</span><span class="p">,</span> <span class="n">configs_array</span><span class="p">)</span>
 
 
 <div class="viewcode-block" id="impute_default_values"><a class="viewcode-back" href="../../../apidoc/smac.configspace.util.html#smac.configspace.util.impute_default_values">[docs]</a><span class="k">def</span> <span class="nf">impute_default_values</span><span class="p">(</span>
@@ -302,8 +302,8 @@
         <span class="n">idx</span> <span class="o">=</span> <span class="n">configuration_space</span><span class="o">.</span><span class="n">get_idx_by_hyperparameter_name</span><span class="p">(</span><span class="n">hp</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
         <span class="n">nonfinite_mask</span> <span class="o">=</span> <span class="o">~</span><span class="n">np</span><span class="o">.</span><span class="n">isfinite</span><span class="p">(</span><span class="n">configs_array</span><span class="p">[:,</span> <span class="n">idx</span><span class="p">])</span>
         <span class="n">configs_array</span><span class="p">[</span><span class="n">nonfinite_mask</span><span class="p">,</span> <span class="n">idx</span><span class="p">]</span> <span class="o">=</span> <span class="n">default</span>
-
-    <span class="k">return</span> <span class="n">configs_array</span></div>
+</div>
+    <span class="k">return</span> <span class="n">configs_array</span>
 </pre></div>
 
            </div>
