--- a/dev/_modules/smac/epm/base_imputor.html
+++ b/dev/_modules/smac/epm/base_imputor.html
@@ -286,8 +286,8 @@
 <span class="sd">        Returns</span>
 <span class="sd">        ----------</span>
 <span class="sd">        imputed_y: np.ndarray</span>
-<span class="sd">            Same shape as censored_y [N, 1]</span>
-<span class="sd">        &quot;&quot;&quot;</span></div></div>
+<span class="sd">            Same shape as censored_y [N, 1]</span></div></div>
+<span class="sd">        &quot;&quot;&quot;</span>
 </pre></div>
 
            </div>
