--- a/dev/_modules/smac/facade/func_facade.html
+++ b/dev/_modules/smac/facade/func_facade.html
@@ -344,8 +344,8 @@
     <span class="n">incumbent_performance</span> <span class="o">=</span> <span class="n">smac</span><span class="o">.</span><span class="n">solver</span><span class="o">.</span><span class="n">runhistory</span><span class="o">.</span><span class="n">data</span><span class="p">[</span><span class="n">run_key</span><span class="p">]</span>
     <span class="n">incumbent</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">array</span><span class="p">([</span><span class="n">incumbent</span><span class="p">[</span><span class="n">tmplt</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">idx</span> <span class="o">+</span> <span class="mi">1</span><span class="p">)]</span>
                           <span class="k">for</span> <span class="n">idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">bounds</span><span class="p">))],</span> <span class="n">dtype</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">float</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">incumbent</span><span class="p">,</span> <span class="n">incumbent_performance</span><span class="o">.</span><span class="n">cost</span><span class="p">,</span> \
-           <span class="n">smac</span></div>
+    <span class="k">return</span> <span class="n">incumbent</span><span class="p">,</span> <span class="n">incumbent_performance</span><span class="o">.</span><span class="n">cost</span><span class="p">,</span> \</div>
+           <span class="n">smac</span>
 </pre></div>
 
            </div>
