--- a/dev/_modules/smac/facade/roar_facade.html
+++ b/dev/_modules/smac/facade/roar_facade.html
@@ -360,8 +360,8 @@
             <span class="n">stats</span><span class="o">=</span><span class="n">stats</span><span class="p">,</span>
             <span class="n">rng</span><span class="o">=</span><span class="n">rng</span><span class="p">,</span>
             <span class="n">run_id</span><span class="o">=</span><span class="n">run_id</span><span class="p">,</span>
-            <span class="n">acquisition_function_optimizer</span><span class="o">=</span><span class="n">rs</span><span class="p">,</span>
-        <span class="p">)</span></div>
+            <span class="n">acquisition_function_optimizer</span><span class="o">=</span><span class="n">rs</span><span class="p">,</span></div>
+        <span class="p">)</span>
 </pre></div>
 
            </div>
