--- a/dev/_modules/smac/initial_design/initial_design.html
+++ b/dev/_modules/smac/initial_design/initial_design.html
@@ -315,8 +315,8 @@
 <span class="sd">        incumbent: Configuration</span>
 <span class="sd">            Initial incumbent configuration.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-
-        <span class="k">raise</span> <span class="ne">NotImplementedError</span></div></div>
+</div></div>
+        <span class="k">raise</span> <span class="ne">NotImplementedError</span>
 </pre></div>
 
            </div>
