--- a/dev/_modules/smac/initial_design/multi_config_initial_design.html
+++ b/dev/_modules/smac/initial_design/multi_config_initial_design.html
@@ -370,8 +370,8 @@
             <span class="n">scid</span><span class="o">.</span><span class="n">_select_configuration</span> <span class="o">=</span> <span class="n">get_config</span>
             <span class="n">scid</span><span class="o">.</span><span class="n">run</span><span class="p">()</span>
             <span class="n">inc</span> <span class="o">=</span> <span class="n">configs</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
-
-        <span class="k">return</span> <span class="n">inc</span></div></div>
+</div></div>
+        <span class="k">return</span> <span class="n">inc</span>
 </pre></div>
 
            </div>
