--- a/dev/_modules/smac/initial_design/single_config_initial_design.html
+++ b/dev/_modules/smac/initial_design/single_config_initial_design.html
@@ -350,8 +350,8 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">traj_logger</span><span class="o">.</span><span class="n">add_entry</span><span class="p">(</span><span class="n">train_perf</span><span class="o">=</span><span class="n">cost</span><span class="p">,</span>
                                    <span class="n">incumbent_id</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">stats</span><span class="o">.</span><span class="n">inc_changed</span><span class="p">,</span>
                                    <span class="n">incumbent</span><span class="o">=</span><span class="n">initial_incumbent</span><span class="p">)</span>
-
-        <span class="k">return</span> <span class="n">initial_incumbent</span></div>
+</div>
+        <span class="k">return</span> <span class="n">initial_incumbent</span>
 
     <span class="k">def</span> <span class="nf">_select_configuration</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Selects a single configuration to run</span>
@@ -360,8 +360,8 @@
 <span class="sd">        -------</span>
 <span class="sd">        config: Configuration</span>
 <span class="sd">            initial incumbent configuration</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">raise</span> <span class="ne">NotImplementedError</span></div>
+<span class="sd">        &quot;&quot;&quot;</span></div>
+        <span class="k">raise</span> <span class="ne">NotImplementedError</span>
 </pre></div>
 
            </div>
