--- a/dev/_modules/smac/intensification/intensification.html
+++ b/dev/_modules/smac/intensification/intensification.html
@@ -451,8 +451,8 @@
 
         <span class="bp">self</span><span class="o">.</span><span class="n">stats</span><span class="o">.</span><span class="n">update_average_configs_per_intensify</span><span class="p">(</span>
             <span class="n">n_configs</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">_chall_indx</span><span class="p">)</span>
-
-        <span class="k">return</span> <span class="n">incumbent</span><span class="p">,</span> <span class="n">inc_perf</span></div>
+</div>
+        <span class="k">return</span> <span class="n">incumbent</span><span class="p">,</span> <span class="n">inc_perf</span>
 
     <span class="k">def</span> <span class="nf">_add_inc_run</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">incumbent</span><span class="p">:</span> <span class="n">Configuration</span><span class="p">,</span> <span class="n">run_history</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Add new run for incumbent</span>
@@ -758,8 +758,8 @@
                                            <span class="n">incumbent</span><span class="o">=</span><span class="n">challenger</span><span class="p">)</span>
             <span class="k">return</span> <span class="n">challenger</span>
 
-        <span class="c1"># undecided</span>
-        <span class="k">return</span> <span class="kc">None</span></div>
+        <span class="c1"># undecided</span></div>
+        <span class="k">return</span> <span class="kc">None</span>
 </pre></div>
 
            </div>
