--- a/dev/_modules/smac/optimizer/objective.html
+++ b/dev/_modules/smac/optimizer/objective.html
@@ -310,8 +310,8 @@
 <span class="sd">    -------</span>
 <span class="sd">    Runtime: float</span>
 <span class="sd">        Sum of all costs</span>
-<span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">_runtime</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">run_history</span><span class="p">,</span> <span class="n">instance_seed_pairs</span><span class="p">))</span></div>
+<span class="sd">    &quot;&quot;&quot;</span></div>
+    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">_runtime</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">run_history</span><span class="p">,</span> <span class="n">instance_seed_pairs</span><span class="p">))</span>
 
 
 <span class="k">def</span> <span class="nf">_cost</span><span class="p">(</span><span class="n">config</span><span class="p">:</span> <span class="n">Configuration</span><span class="p">,</span> <span class="n">run_history</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">,</span>
@@ -367,8 +367,8 @@
 <span class="sd">    ----------</span>
 <span class="sd">    Cost: float</span>
 <span class="sd">        Average cost</span>
-<span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="n">_cost</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">run_history</span><span class="p">,</span> <span class="n">instance_seed_pairs</span><span class="p">))</span></div>
+<span class="sd">    &quot;&quot;&quot;</span></div>
+    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="n">_cost</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">run_history</span><span class="p">,</span> <span class="n">instance_seed_pairs</span><span class="p">))</span>
 
 
 <div class="viewcode-block" id="sum_cost"><a class="viewcode-back" href="../../../apidoc/smac.optimizer.objective.html#smac.optimizer.objective.sum_cost">[docs]</a><span class="k">def</span> <span class="nf">sum_cost</span><span class="p">(</span><span class="n">config</span><span class="p">:</span> <span class="n">Configuration</span><span class="p">,</span> <span class="n">run_history</span><span class="p">:</span> <span class="n">RunHistory</span><span class="p">,</span>
@@ -391,8 +391,8 @@
 <span class="sd">    ----------</span>
 <span class="sd">    sum_cost: float</span>
 <span class="sd">        Sum of costs of config</span>
-<span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">_cost</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">run_history</span><span class="p">,</span> <span class="n">instance_seed_pairs</span><span class="p">))</span></div>
+<span class="sd">    &quot;&quot;&quot;</span></div>
+    <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">_cost</span><span class="p">(</span><span class="n">config</span><span class="p">,</span> <span class="n">run_history</span><span class="p">,</span> <span class="n">instance_seed_pairs</span><span class="p">))</span>
 </pre></div>
 
            </div>
