--- a/dev/_modules/smac/utils/duplicate_filter_logging.html
+++ b/dev/_modules/smac/utils/duplicate_filter_logging.html
@@ -253,8 +253,8 @@
 
 <div class="viewcode-block" id="DuplicateFilter.filter"><a class="viewcode-back" href="../../../apidoc/smac.utils.duplicate_filter_logging.html#smac.utils.duplicate_filter_logging.DuplicateFilter.filter">[docs]</a>    <span class="k">def</span> <span class="nf">filter</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">record</span><span class="p">):</span>
         <span class="n">rv</span> <span class="o">=</span> <span class="n">record</span><span class="o">.</span><span class="n">msg</span> <span class="ow">not</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">msgs</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">msgs</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">record</span><span class="o">.</span><span class="n">msg</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">rv</span></div></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">msgs</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">record</span><span class="o">.</span><span class="n">msg</span><span class="p">)</span></div></div>
+        <span class="k">return</span> <span class="n">rv</span>
 </pre></div>
 
            </div>
