--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -762,6 +762,8 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="apidoc/smac.optimizer.smbo.html#smac.optimizer.smbo.SMBO.random_configuration_chooser">random_configuration_chooser (smac.optimizer.smbo.SMBO attribute)</a>
+</li>
       <li><a href="apidoc/smac.initial_design.random_configuration_design.html#smac.initial_design.random_configuration_design.RandomConfiguration">RandomConfiguration (class in smac.initial_design.random_configuration_design)</a>
 </li>
       <li><a href="apidoc/smac.epm.random_epm.html#smac.epm.random_epm.RandomEPM">RandomEPM (class in smac.epm.random_epm)</a>
@@ -808,6 +810,8 @@
       </ul></li>
       <li><a href="apidoc/smac.facade.roar_facade.html#smac.facade.roar_facade.ROAR">ROAR (class in smac.facade.roar_facade)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.initial_design.default_configuration_design.html#smac.initial_design.default_configuration_design.DefaultConfiguration.run">run() (smac.initial_design.default_configuration_design.DefaultConfiguration method)</a>
 
       <ul>
@@ -834,8 +838,6 @@
         <li><a href="apidoc/smac.tae.execute_ta_run_old.html#smac.tae.execute_ta_run_old.ExecuteTARunOld.run">(smac.tae.execute_ta_run_old.ExecuteTARunOld method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.tae.execute_ta_run.html#smac.tae.execute_ta_run.ExecuteTARun.run_obj">run_obj (smac.tae.execute_ta_run.ExecuteTARun attribute)</a>
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory">RunHistory (class in smac.runhistory.runhistory)</a>
