--- a/dev/_modules/smac/epm/rfr_imputator.html
+++ b/dev/_modules/smac/epm/rfr_imputator.html
@@ -434,8 +434,8 @@
 
         <span class="k">if</span> <span class="ow">not</span> <span class="n">np</span><span class="o">.</span><span class="n">isfinite</span><span class="p">(</span><span class="n">imputed_y</span><span class="p">)</span><span class="o">.</span><span class="n">all</span><span class="p">():</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">critical</span><span class="p">(</span><span class="s2">&quot;Imputed values are not finite, </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span>
-                                 <span class="nb">str</span><span class="p">(</span><span class="n">imputed_y</span><span class="p">))</span>
-        <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">reshape</span><span class="p">(</span><span class="n">imputed_y</span><span class="p">,</span> <span class="p">[</span><span class="n">imputed_y</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="mi">1</span><span class="p">])</span></div></div>
+                                 <span class="nb">str</span><span class="p">(</span><span class="n">imputed_y</span><span class="p">))</span></div></div>
+        <span class="k">return</span> <span class="n">np</span><span class="o">.</span><span class="n">reshape</span><span class="p">(</span><span class="n">imputed_y</span><span class="p">,</span> <span class="p">[</span><span class="n">imputed_y</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span> <span class="mi">1</span><span class="p">])</span>
 </pre></div>
 
            </div>
