--- a/dev/_modules/smac/optimizer/acquisition.html
+++ b/dev/_modules/smac/optimizer/acquisition.html
@@ -302,8 +302,8 @@
 <span class="sd">        ----------</span>
 <span class="sd">        kwargs</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="p">:</span>
-            <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">kwargs</span><span class="p">[</span><span class="n">key</span><span class="p">])</span></div>
+        <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="p">:</span></div>
+            <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">kwargs</span><span class="p">[</span><span class="n">key</span><span class="p">])</span>
 
     <span class="k">def</span> <span class="nf">__call__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">configurations</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Configuration</span><span class="p">]):</span>
         <span class="sd">&quot;&quot;&quot;Computes the acquisition value for a given X</span>
@@ -346,8 +346,8 @@
 <span class="sd">        -------</span>
 <span class="sd">        np.ndarray(N,1)</span>
 <span class="sd">            Acquisition function values wrt X</span>
-<span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">()</span></div>
+<span class="sd">        &quot;&quot;&quot;</span></div>
+        <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">()</span>
 
 
 <div class="viewcode-block" id="EI"><a class="viewcode-back" href="../../../apidoc/smac.optimizer.acquisition.html#smac.optimizer.acquisition.EI">[docs]</a><span class="k">class</span> <span class="nc">EI</span><span class="p">(</span><span class="n">AbstractAcquisitionFunction</span><span class="p">):</span>
@@ -426,8 +426,8 @@
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
                 <span class="s2">&quot;Expected Improvement is smaller than 0 for at least one &quot;</span>
                 <span class="s2">&quot;sample.&quot;</span><span class="p">)</span>
-
-        <span class="k">return</span> <span class="n">f</span></div>
+</div>
+        <span class="k">return</span> <span class="n">f</span>
 
 
 <div class="viewcode-block" id="EIPS"><a class="viewcode-back" href="../../../apidoc/smac.optimizer.acquisition.html#smac.optimizer.acquisition.EIPS">[docs]</a><span class="k">class</span> <span class="nc">EIPS</span><span class="p">(</span><span class="n">EI</span><span class="p">):</span>
@@ -508,8 +508,8 @@
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
                 <span class="s2">&quot;Expected Improvement per Second is smaller than 0 &quot;</span>
                 <span class="s2">&quot;for at least one sample.&quot;</span><span class="p">)</span>
-
-        <span class="k">return</span> <span class="n">f</span><span class="o">.</span><span class="n">reshape</span><span class="p">((</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">))</span></div>
+</div>
+        <span class="k">return</span> <span class="n">f</span><span class="o">.</span><span class="n">reshape</span><span class="p">((</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">))</span>
 
 
 <div class="viewcode-block" id="LogEI"><a class="viewcode-back" href="../../../apidoc/smac.optimizer.acquisition.html#smac.optimizer.acquisition.LogEI">[docs]</a><span class="k">class</span> <span class="nc">LogEI</span><span class="p">(</span><span class="n">AbstractAcquisitionFunction</span><span class="p">):</span>
@@ -583,8 +583,8 @@
         <span class="k">if</span> <span class="p">(</span><span class="n">log_ei</span> <span class="o">&lt;</span> <span class="mi">0</span><span class="p">)</span><span class="o">.</span><span class="n">any</span><span class="p">():</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
                 <span class="s2">&quot;Expected Improvement is smaller than 0 for at least one sample.&quot;</span><span class="p">)</span>
-
-        <span class="k">return</span> <span class="n">log_ei</span><span class="o">.</span><span class="n">reshape</span><span class="p">((</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">))</span></div>
+</div>
+        <span class="k">return</span> <span class="n">log_ei</span><span class="o">.</span><span class="n">reshape</span><span class="p">((</span><span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">))</span>
 </pre></div>
 
            </div>
