--- a/dev/_modules/smac/stats/stats.html
+++ b/dev/_modules/smac/stats/stats.html
@@ -322,8 +322,8 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="o">.</span><span class="n">output_dir_for_this_run</span><span class="p">,</span> <span class="s2">&quot;stats.json&quot;</span>
         <span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Saving stats to </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">path</span><span class="p">)</span>
-        <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">path</span><span class="p">,</span> <span class="s1">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">fh</span><span class="p">:</span>
-            <span class="n">json</span><span class="o">.</span><span class="n">dump</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">fh</span><span class="p">)</span></div>
+        <span class="k">with</span> <span class="nb">open</span><span class="p">(</span><span class="n">path</span><span class="p">,</span> <span class="s1">&#39;w&#39;</span><span class="p">)</span> <span class="k">as</span> <span class="n">fh</span><span class="p">:</span></div>
+            <span class="n">json</span><span class="o">.</span><span class="n">dump</span><span class="p">(</span><span class="n">data</span><span class="p">,</span> <span class="n">fh</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Stats.load"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.load">[docs]</a>    <span class="k">def</span> <span class="nf">load</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">fn</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -346,8 +346,8 @@
         <span class="k">for</span> <span class="n">key</span> <span class="ow">in</span> <span class="n">data</span><span class="p">:</span>
             <span class="k">if</span> <span class="nb">hasattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">):</span>
                 <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">data</span><span class="p">[</span><span class="n">key</span><span class="p">])</span>
-            <span class="k">else</span><span class="p">:</span>
-                <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Stats does not recognize </span><span class="si">{}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">key</span><span class="p">))</span></div>
+            <span class="k">else</span><span class="p">:</span></div>
+                <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Stats does not recognize </span><span class="si">{}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">key</span><span class="p">))</span>
 
 <div class="viewcode-block" id="Stats.start_timing"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.start_timing">[docs]</a>    <span class="k">def</span> <span class="nf">start_timing</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;</span>
@@ -356,8 +356,8 @@
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_start_time</span> <span class="o">=</span> <span class="n">time</span><span class="o">.</span><span class="n">time</span><span class="p">()</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">wallclock_time_used</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Scenario is missing&quot;</span><span class="p">)</span></div>
+        <span class="k">else</span><span class="p">:</span></div>
+            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Scenario is missing&quot;</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Stats.get_used_wallclock_time"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.get_used_wallclock_time">[docs]</a>    <span class="k">def</span> <span class="nf">get_used_wallclock_time</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Returns used wallclock time</span>
@@ -367,29 +367,29 @@
 <span class="sd">        wallclock_time : int</span>
 <span class="sd">            used wallclock time in sec</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-
-        <span class="k">return</span> <span class="n">time</span><span class="o">.</span><span class="n">time</span><span class="p">()</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_start_time</span></div>
+</div>
+        <span class="k">return</span> <span class="n">time</span><span class="o">.</span><span class="n">time</span><span class="p">()</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_start_time</span>
 
 <div class="viewcode-block" id="Stats.get_remaing_time_budget"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.get_remaing_time_budget">[docs]</a>    <span class="k">def</span> <span class="nf">get_remaing_time_budget</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Subtracts the runtime configuration budget with the used wallclock</span>
 <span class="sd">        time&quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="p">:</span>
             <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="o">.</span><span class="n">wallclock_limit</span> <span class="o">-</span> <span class="p">(</span><span class="n">time</span><span class="o">.</span><span class="n">time</span><span class="p">()</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_start_time</span><span class="p">)</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="s2">&quot;Scenario is missing&quot;</span></div>
+        <span class="k">else</span><span class="p">:</span></div>
+            <span class="k">raise</span> <span class="s2">&quot;Scenario is missing&quot;</span>
 
 <div class="viewcode-block" id="Stats.get_remaining_ta_runs"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.get_remaining_ta_runs">[docs]</a>    <span class="k">def</span> <span class="nf">get_remaining_ta_runs</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Subtract the target algorithm runs in the scenario with the used ta</span>
 <span class="sd">        runs&quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="p">:</span>
             <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="o">.</span><span class="n">ta_run_limit</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">ta_runs</span>
-        <span class="k">else</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="s2">&quot;Scenario is missing&quot;</span></div>
+        <span class="k">else</span><span class="p">:</span></div>
+            <span class="k">raise</span> <span class="s2">&quot;Scenario is missing&quot;</span>
 
 <div class="viewcode-block" id="Stats.get_remaining_ta_budget"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.get_remaining_ta_budget">[docs]</a>    <span class="k">def</span> <span class="nf">get_remaining_ta_budget</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Subtracts the ta running budget with the used time&quot;&quot;&quot;</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="p">:</span>
-            <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="o">.</span><span class="n">algo_runs_timelimit</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">ta_time_used</span></div>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="p">:</span></div>
+            <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">__scenario</span><span class="o">.</span><span class="n">algo_runs_timelimit</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">ta_time_used</span>
 
 <div class="viewcode-block" id="Stats.is_budget_exhausted"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.is_budget_exhausted">[docs]</a>    <span class="k">def</span> <span class="nf">is_budget_exhausted</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Check whether the configuration budget for time budget, ta_budget</span>
@@ -401,8 +401,8 @@
 <span class="sd">            true if one of the budgets is exhausted</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">return</span>  <span class="bp">self</span><span class="o">.</span><span class="n">get_remaing_time_budget</span><span class="p">()</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="ow">or</span> \
-                <span class="bp">self</span><span class="o">.</span><span class="n">get_remaining_ta_budget</span><span class="p">()</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="ow">or</span> \
-                <span class="bp">self</span><span class="o">.</span><span class="n">get_remaining_ta_runs</span><span class="p">()</span> <span class="o">&lt;=</span> <span class="mi">0</span></div>
+                <span class="bp">self</span><span class="o">.</span><span class="n">get_remaining_ta_budget</span><span class="p">()</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="ow">or</span> \</div>
+                <span class="bp">self</span><span class="o">.</span><span class="n">get_remaining_ta_runs</span><span class="p">()</span> <span class="o">&lt;=</span> <span class="mi">0</span>
 
 <div class="viewcode-block" id="Stats.update_average_configs_per_intensify"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.update_average_configs_per_intensify">[docs]</a>    <span class="k">def</span> <span class="nf">update_average_configs_per_intensify</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">n_configs</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Updates statistics how many configurations on average per used in</span>
@@ -419,8 +419,8 @@
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_n_calls_of_intensify</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_ema_n_configs_per_intensifiy</span> <span class="o">=</span> <span class="n">n_configs</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">_ema_n_configs_per_intensifiy</span> <span class="o">=</span> <span class="p">(</span><span class="mi">1</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_EMA_ALPHA</span><span class="p">)</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">_ema_n_configs_per_intensifiy</span> \
-                                                        <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_EMA_ALPHA</span> <span class="o">*</span> <span class="n">n_configs</span></div>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_ema_n_configs_per_intensifiy</span> <span class="o">=</span> <span class="p">(</span><span class="mi">1</span> <span class="o">-</span> <span class="bp">self</span><span class="o">.</span><span class="n">_EMA_ALPHA</span><span class="p">)</span> <span class="o">*</span> <span class="bp">self</span><span class="o">.</span><span class="n">_ema_n_configs_per_intensifiy</span> \</div>
+                                                        <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">_EMA_ALPHA</span> <span class="o">*</span> <span class="n">n_configs</span>
 
 <div class="viewcode-block" id="Stats.print_stats"><a class="viewcode-back" href="../../../apidoc/smac.stats.stats.html#smac.stats.stats.Stats.print_stats">[docs]</a>    <span class="k">def</span> <span class="nf">print_stats</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">debug_out</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Prints all statistics</span>
@@ -444,8 +444,8 @@
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">_n_calls_of_intensify</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Average Configurations per Intensify: </span><span class="si">%.2f</span><span class="s2">&quot;</span> <span class="o">%</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_n_configs_per_intensify</span> <span class="o">/</span> <span class="bp">self</span><span class="o">.</span><span class="n">_n_calls_of_intensify</span><span class="p">))</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Exponential Moving Average of Configurations per Intensify: </span><span class="si">%.2f</span><span class="s2">&quot;</span> <span class="o">%</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_ema_n_configs_per_intensifiy</span><span class="p">))</span>
-
-        <span class="n">log_func</span><span class="p">(</span><span class="s2">&quot;##########################################################&quot;</span><span class="p">)</span></div></div>
+</div></div>
+        <span class="n">log_func</span><span class="p">(</span><span class="s2">&quot;##########################################################&quot;</span><span class="p">)</span>
 </pre></div>
 
            </div>
