--- a/dev/_modules/smac/tae/execute_ta_run_old.html
+++ b/dev/_modules/smac/tae/execute_ta_run_old.html
@@ -359,8 +359,8 @@
             <span class="n">cost</span> <span class="o">=</span> <span class="n">runtime</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">cost</span> <span class="o">=</span> <span class="n">quality</span>
-
-        <span class="k">return</span> <span class="n">status</span><span class="p">,</span> <span class="n">cost</span><span class="p">,</span> <span class="nb">float</span><span class="p">(</span><span class="n">runtime</span><span class="p">),</span> <span class="n">additional_info</span></div>
+</div>
+        <span class="k">return</span> <span class="n">status</span><span class="p">,</span> <span class="n">cost</span><span class="p">,</span> <span class="nb">float</span><span class="p">(</span><span class="n">runtime</span><span class="p">),</span> <span class="n">additional_info</span>
     
     <span class="k">def</span> <span class="nf">_call_ta</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> 
                  <span class="n">config</span><span class="p">:</span><span class="n">Configuration</span><span class="p">,</span>
@@ -385,8 +385,8 @@
 
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Stdout: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">stdout_</span><span class="p">))</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Stderr: </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">stderr_</span><span class="p">))</span>
-        
-        <span class="k">return</span> <span class="n">stdout_</span><span class="p">,</span> <span class="n">stderr_</span></div>
+        </div>
+        <span class="k">return</span> <span class="n">stdout_</span><span class="p">,</span> <span class="n">stderr_</span>
 </pre></div>
 
            </div>
